add tile links component

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/static_title-text-image-link-list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/static_title-text-image-link-list.html
@@ -11,3 +11,6 @@
 <div data-sly-test="${properties.view == 'product-overview'}">
     <sly data-sly-include="views/view-product-overview.html"></sly>
 </div>
+<div data-sly-test="${properties.view == 'tile-link'}">
+    <sly data-sly-include="views/view-tile-links.html"></sly>
+</div>
