--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-services.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-services.html
@@ -17,8 +17,8 @@
     <!--/* Include: Mega Menu Modules */ -->
     <div class="mega-menu__category">
       <div class="container">
-          <div class="row">
-            <div class="col-xs-12 col-md-3">
+          <div class="mega-menu__row">
+            <div class="mega-menu__col mega-menu__col--4">
                 <!--/* Include: Search Box - Inline */ -->
                 <div class="mega-menu__category-item">
                   <sly data-sly-resource="${'search-inline' @ resourceType='/apps/eaton/static-components/content/search-box'}"></sly>
@@ -27,6 +27,13 @@
                 <!--/* Include: Link List - default */ -->
                 <div class="mega-menu__category-item">
                   <sly data-sly-resource="${'link-list' @ resourceType='/apps/eaton/static-components/content/link-list'}"></sly>
+                </div>
+            </div>
+
+            <div class="mega-menu__col mega-menu__col--4">
+                <!--/* Include: TTIL - Single Feature */ -->
+                <div class="mega-menu__category-item">
+                  <sly data-sly-resource="${'download-list-1' @ resourceType='/apps/eaton/static-components/content/link-list'}"></sly>
                 </div>
             </div>
           </div>
