M49 Category Highlight - Homepage 3 Column card view.

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/static_list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/static_list.html
@@ -2,7 +2,7 @@
     <div class="alert alert-warning">List Component - Edit Start</div>
 </sly>
 
-<sly data-sly-test="${properties.view == 'default'}">
+<sly data-sly-test="${properties.view == 'nofeaturedarticle'}">
     <sly data-sly-include="views/view-default.html" data-sly-unwrap></sly>    
 </sly>
 
