--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/static_link-list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/static_link-list.html
@@ -30,3 +30,7 @@
 <sly data-sly-test="${properties.view == 'download-list-desc'}">
     <sly data-sly-include="views/view-download-list-desc.html" data-sly-unwrap></sly>
 </sly>
+
+<sly data-sly-test="${properties.view == 'section-navigation'}">
+    <sly data-sly-include="views/view-section-navigation.html" data-sly-unwrap></sly>
+</sly>
