[M1] Header - Move placeholder data to /data/ folder

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
@@ -1,5 +1,4 @@
-
-<sly data-sly-use.header="header-data.js">
+<sly data-sly-use.header="data/header-data.js">
     <div class="eaton-header">
         <!--/* Include: Full Page Drawer */*/-->
         <sly data-sly-resource="${'full-page-drawer' @ resourceType='eaton/static-components/structure/full-page-drawer'}"></sly>
