[T3] Add basic styling for Text, Quote and Breadcrumb components

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/breadcrumb/static_breadcrumb.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/breadcrumb/static_breadcrumb.html
@@ -5,6 +5,12 @@
 
 <sly data-sly-use.data="data/breadcrumb-data.js">
 
-  <div class="eaton-breadcrumb"> Breadcrumb Component </div>
+  <div class="eaton-breadcrumb">
+    <div class="container">
+      <ul class="eaton-breadcrumb__list">
+        <li class="eaton-breadcrumb__list-item">Breadcrumb Component</li>
+      </ul>
+    </div>
+  </div>
 
 </sly>
