--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/quote/static_quote.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/quote/static_quote.html
@@ -5,9 +5,11 @@
 
 <sly data-sly-use.data="data/quote-data.js">
 
-  <div class="eaton-quote">
-    <div class="eaton-quote__text">${ data.text }</div>
-    <div class="eaton-quote__author">${ data.author }</div>
+  <div class="eaton-quote text-center">
+    <div class="container">
+      <div class="eaton-quote__text">${ data.text }</div>
+      <div class="eaton-quote__author">${ data.author }</div>
+    </div>
   </div>
 
 </sly>
