Title Component - Mega Menu Contents

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
@@ -39,14 +39,14 @@
 
                     <!--/* Search & Mobile Hamburger Menu  */-->
                     <div class="header-primary-nav__links">
-                        <a href="#" class="header-primary-nav__open-search">
+                        <button class="button--reset header-primary-nav__open-search">
                           <span class="sr-only">Search</span>
                           <i class="glyphicon glyphicon-search" aria-hidden="true"></i>
-                        </a>
-                        <a href="#" class="header-primary-nav__open-mobile-menu">
+                        </button>
+                        <button class="button--reset header-primary-nav__open-mobile-menu">
                           <span class="sr-only">Open Mobile Menu</span>
                           <i class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></i>
-                        </a>
+                        </button>
                     </div>
                 </div>
             </div>
