M49 Category Highlight: - Featured article view. - 3 Column view. - Card as links.

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/static_list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/static_list.html
@@ -6,6 +6,10 @@
     <sly data-sly-include="views/view-default.html" data-sly-unwrap></sly>    
 </sly>
 
+<sly data-sly-test="${properties.view == 'featuredarticle'}">
+    <sly data-sly-include="views/view-featured-article.html" data-sly-unwrap></sly>
+</sly>
+
 <sly data-sly-test="${ wcmmode.edit }">
     <div class="alert alert-warning">List Component - Edit End</div>
 </sly>
