--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/category-highlight/static_category-highlight.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/category-highlight/static_category-highlight.html
@@ -4,4 +4,6 @@
 
 <sly data-sly-resource="${'title-text-image-link' @ resourceType='eaton/static-components/content/title-text-image-link'}"></sly>
 
-<sly data-sly-resource="${'list' @ resourceType='eaton/static-components/content/list'}"></sly>
+<div class="category-highlight-list-container">
+    <sly data-sly-resource="${'list' @ resourceType='eaton/static-components/content/list'}"></sly>
+</div>
