[T3] Add basic styling for Text, Quote and Breadcrumb components

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/footer/static_footer.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/footer/static_footer.html
@@ -1,5 +1,5 @@
 <!--/* –––––––– Component M7: Footer –––––––– /*-->
-<div class="eaton-footer"
+<div class="eaton-footer dark-theme"
   data-sly-use.data="data/footer-data.js">
 
   <!--/* Footer: Top */-->
