--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/static_title-text-image-link.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/static_title-text-image-link.html
@@ -1,5 +1,5 @@
 <sly data-sly-test="${ wcmmode.edit }">
-    <div class="alert alert-warning">Title Text Image Link Component - Edit Start</div>
+    <div class="alert alert-warning">TTIL Component</div>
 </sly>
 
 <sly data-sly-test="${properties.view == 'l2-hero'}">
