--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/static_list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/static_list.html
@@ -1,11 +1,7 @@
 <sly data-sly-test="${ wcmmode.edit }">
-    <div class="alert alert-warning">List Component - Edit Start</div>
+    <div class="alert alert-warning">List Component</div>
 </sly>
 
 <sly data-sly-test="${properties.view == 'nofeaturedarticle'}">
-    <sly data-sly-include="views/view-default.html" data-sly-unwrap></sly>    
-</sly>
-
-<sly data-sly-test="${ wcmmode.edit }">
-    <div class="alert alert-warning">List Component - Edit End</div>
+    <sly data-sly-include="views/view-default.html"></sly>
 </sly>
