Starting work on Category Hero view for the TTIL List component.

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/static_title-text-image-link-list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/static_title-text-image-link-list.html
@@ -14,3 +14,6 @@
 <sly data-sly-test="${properties.view == 'tile-link'}">
     <sly data-sly-include="views/view-tile-links.html"></sly>
 </sly>
+<sly data-sly-test="${properties.view == 'category-hero'}">
+    <sly data-sly-include="views/view-category-hero.html"></sly>
+</sly>
