--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/title/static_title.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/title/static_title.html
@@ -15,9 +15,9 @@
 
 
 <sly data-sly-test="${ properties.view == 'default' }">
-  <sly data-sly-include="views/view-default.html" data-sly-unwrap></sly>
+  <sly data-sly-include="views/view-default.html"></sly>
 </sly>
 
 <sly data-sly-test="${ properties.view == 'witheyebrowandbyline' }">
-  <sly data-sly-include="views/view-witheyebrowandbyline.html" data-sly-unwrap></sly>
+  <sly data-sly-include="views/view-witheyebrowandbyline.html"></sly>
 </sly>
