featured topic refactored / now uses the /text and /linklist components

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/featured-topic/static_featured-topic.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/featured-topic/static_featured-topic.html
@@ -7,58 +7,35 @@
   <div class="eaton-featured-topic container" >
     <div class="row">
       <div class="col-sm-12">
-        <h2 class="eaton-featured-topic__title">${featuredTopic.title}</h2>
-        <div class="eaton-featured-topic__paragraph body-copy">
-          ${featuredTopic.paragraph}
+        <div class="eaton-featured-topic__text">
+          <!--/* Component: Text */-->
+          <sly data-sly-resource="${'featured-topic-text' @ resourceType='/apps/eaton/static-components/general/text'}"></sly>
         </div>
       </div>
     </div>
 
     <div class="row">
       <div class="col-sm-6 eaton-featured-topic__list-left">
-        <h4 class="eaton-featured-topic__list-title" >
-          ${featuredTopic.leftList.title}
-        </h4>
-        <ul
-          data-sly-list="${ featuredTopic.leftList.items }"
-          class="b-list--no-bullets"
-        >
-          <li>
-            <a class="heading-h5__link b-list__item"
-              aria-label="Go to ${ item.title }"
-              target="${ item.target }"
-              href="${item.href}"
-            >${item.title}</a>
-          </li>
-        </ul>
+        <div class="eaton-featured-topic__link-list">
+          <!--/* Component: LinkList */-->
+          <sly data-sly-resource="${'eaton-featured-topic-link-list-left' @ resourceType='/apps/eaton/static-components/content/link-list'}"></sly>
+        </div>
       </div>
 
       <div class="col-sm-6 eaton-featured-topic__list-right">
-        <h4 class="eaton-featured-topic__list-title">
-          ${featuredTopic.rightList.title}
-        </h4>
-        <ul
-          data-sly-list="${featuredTopic.rightList.items}"
-          class="b-list--no-bullets"
-        >
-          <li>
-            <a class="heading-h5__link b-list__item"
-              aria-label="Go to ${ item.title }"
-              target="${ item.target }"
-              href="${item.href}"
-            >${item.title}</a>
-          </li>
-        </ul>
+        <div class="eaton-featured-topic__link-list">
+          <!--/* Component: LinkList */-->
+          <sly data-sly-resource="${'eaton-featured-topic-link-list-left' @ resourceType='/apps/eaton/static-components/content/link-list'}"></sly>
+        </div>
       </div>
     </div>
 
     <div class="row eaton-featured-topic__button-container">
       <div class="col-sm-12 u-text-center">
-        <a href="${featuredTopic.mainCta.href}"
-          aria-label="Go to ${ featuredTopic.mainCta.title }"
-          target="${ item.target }"
-          class="b-button b-button--secondary b-button--light"
-        >${featuredTopic.mainCta.title}</a>
+        <div class="eaton-featured-topic__text">
+          <!--/* Component: Text */-->
+          <sly data-sly-resource="${'featured-topic-text' @ resourceType='/apps/eaton/static-components/general/ctabutton'}"></sly>
+        </div>
       </div>
     </div>
   </div>
