--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/static_list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/static_list.html
@@ -9,3 +9,7 @@
 <sly data-sly-test="${properties.view == 'featuredarticle'}">
     <sly data-sly-include="views/view-featured-article.html" data-sly-unwrap></sly>
 </sly>
+
+<sly data-sly-test="${properties.view == 'article-list-single-feature'}">
+    <sly data-sly-include="views/view-article-list-single-feature.html" data-sly-unwrap></sly>
+</sly>
