Image List - Markup + Styles

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/static_title-text-image-link-list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/static_title-text-image-link-list.html
@@ -17,3 +17,6 @@
 <sly data-sly-test="${properties.view == 'category-hero'}">
     <sly data-sly-include="views/view-category-hero.html"></sly>
 </sly>
+<sly data-sly-test="${properties.view == 'image-only'}">
+    <sly data-sly-include="views/view-image-only.html"></sly>
+</sly>
