--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/quote/static_quote.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/quote/static_quote.html
@@ -7,8 +7,9 @@
 
   <div class="eaton-quote text-center">
     <div class="container">
+      <div class="eaton-quote__image"></div>
       <div class="eaton-quote__text">${ data.text }</div>
-      <div class="eaton-quote__author">${ data.author }</div>
+      <div class="eaton-quote__author"><span class="eaton-quote__name">${ data.author.name},</span> <span class="eaton-quote__title">${ data.author.title} </span></div>
     </div>
   </div>
 
