--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/static_title-text-image-link-list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/static_title-text-image-link-list.html
@@ -3,7 +3,9 @@
 </sly>
 
 <sly data-sly-test="${properties.view == 'landing-hero'}">
-    <sly data-sly-include="views/view-landing-hero.html"></sly>
+    <div data-sly-use.lib="views/view-landing-hero.html" data-sly-use.data = "../data/view-landing-hero-multiple-data.js">
+		<div data-sly-call="${lib.multiple @ param=data}"></div>
+	</div>
 </sly>
 <sly data-sly-test="${properties.view == 'featured-story'}">
     <sly data-sly-include="views/view-featured-story.html"></sly>
@@ -17,3 +19,10 @@
 <sly data-sly-test="${properties.view == 'category-hero'}">
     <sly data-sly-include="views/view-category-hero.html"></sly>
 </sly>
+<sly data-sly-test="${properties.view == 'landing-hero-single'}" >
+	<div data-sly-use.lib="views/view-landing-hero.html" data-sly-use.data = "../data/view-landing-hero-single-data.js">
+		<div data-sly-call="${lib.single @ param=data}"></div>
+	</div>  
+</sly>
+
+
