--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/static_title-text-image-link-list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/static_title-text-image-link-list.html
@@ -10,8 +10,8 @@
 <sly data-sly-test="${properties.view == 'featured-story'}">
     <sly data-sly-include="views/view-featured-story.html"></sly>
 </sly>
-<sly data-sly-test="${properties.view == 'product-overview'}">
-    <sly data-sly-include="views/view-product-overview.html"></sly>
+<sly data-sly-test="${properties.view == 'page-overview'}">
+    <sly data-sly-include="views/view-page-overview.html"></sly>
 </sly>
 <sly data-sly-test="${properties.view == 'tile-link'}">
     <sly data-sly-include="views/view-tile-links.html"></sly>
@@ -22,7 +22,7 @@
 <sly data-sly-test="${properties.view == 'landing-hero-single'}" >
 	<div data-sly-use.lib="views/view-landing-hero.html" data-sly-use.data = "../data/view-landing-hero-single-data.js">
 		<div data-sly-call="${lib.single @ param=data}"></div>
-	</div>  
+	</div>
 </sly>
 <sly data-sly-test="${properties.view == 'image-only'}">
     <sly data-sly-include="views/view-image-only.html"></sly>
