--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/breadcrumb/static_breadcrumb.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/breadcrumb/static_breadcrumb.html
@@ -7,8 +7,10 @@
 
   <div class="eaton-breadcrumb">
     <div class="container">
-      <ul class="eaton-breadcrumb__list">
-        <li class="eaton-breadcrumb__list-item">Breadcrumb Component</li>
+      <ul class="eaton-breadcrumb__list" data-sly-list.link="${data.links}">
+        <li class="eaton-breadcrumb__list-item" >
+        	<a href="${link.list}" title="Go back to ${link.text}">${link.text}</a> <span class="glyphicon glyphicon-chevron-right" data-sly-test="${linkList.index != data.links.length}"></span>
+        </li>
       </ul>
     </div>
   </div>
