--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/footer/static_footer.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/footer/static_footer.html
@@ -18,7 +18,7 @@
       <div class="row">
 
         <div class="col-xs-12 col-md-6">
-          <div class="eaton-footer-top__text">
+          <div class="eaton-footer-top__content">
             <!--/* Component: Text */-->
             <sly data-sly-resource="${'footer-text' @ resourceType='/apps/eaton/static-components/general/text'}"></sly>
           </div>
@@ -27,14 +27,14 @@
         <div class="col-xs-12 col-md-3">
           <div class="eaton-footer-top__link-list">
             <!--/* Component: LinkList */-->
-            <sly data-sly-resource="${'footer-link-list-company' @ resourceType='/apps/eaton/static-components/content/link-list'}"></sly>
+            <sly data-sly-resource="${'link-list-2nd-col' @ resourceType='/apps/eaton/static-components/content/link-list'}"></sly>
           </div>
         </div>
 
         <div class="col-xs-12 col-md-3">
           <div class="eaton-footer-top__link-list">
             <!--/* Component: LinkList */-->
-            <sly data-sly-resource="${'footer-link-list-popular' @ resourceType='/apps/eaton/static-components/content/link-list'}"></sly>
+            <sly data-sly-resource="${'link-list-3rd-col' @ resourceType='/apps/eaton/static-components/content/link-list'}"></sly>
           </div>
           <div class="eaton-footer-top__social-links">
             <!--/* Component: Social Links */-->
@@ -53,7 +53,7 @@
         <div class="col-xs-12">
           <div class="eaton-footer-bottom__link-list">
             <!--/* Component: LinkList */-->
-            <sly data-sly-resource="${'footer-link-list-legal' @ resourceType='/apps/eaton/static-components/content/link-list'}"></sly>
+            <sly data-sly-resource="${'link-list-bottom' @ resourceType='/apps/eaton/static-components/content/link-list'}"></sly>
           </div>
           <div class="eaton-footer-bottom__copyright"> ${ data.bottom.copyright } </div>
         </div>
