--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-company.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-company.html
@@ -7,27 +7,33 @@
     <div class="mega-menu__category">
       <div class="container">
           <div class="mega-menu__row">
+            <!--/* Include: Column 1 - Flexible width */ -->
+            <div class="mega-menu__col mega-menu__col--flex">
+            </div>
+
+            <!--/* Include: Column 2  */-->
             <div class="mega-menu__col mega-menu__col--4">
                 <!--/* Include: Search Box - Inline */ -->
                 <div class="mega-menu__category-item">
-                  <sly data-sly-resource="${'search-inline' @ resourceType='/apps/eaton/static-components/content/search-box'}"></sly>
+                  <sly data-sly-resource="${'search-inline-company' @ resourceType='/apps/eaton/static-components/content/search-box'}"></sly>
                 </div>
 
                 <!--/* Include: Link List - default */ -->
                 <div class="mega-menu__category-item">
-                  <sly data-sly-resource="${'link-list' @ resourceType='/apps/eaton/static-components/content/link-list'}"></sly>
+                  <sly data-sly-resource="${'link-list-company' @ resourceType='/apps/eaton/static-components/content/link-list'}"></sly>
                 </div>
             </div>
 
+            <!--/* Include: Column 3  */-->
             <div class="mega-menu__col mega-menu__col--4">
                 <!--/* Include: TTIL - Single Feature */ -->
                 <div class="mega-menu__category-item">
-                  <sly data-sly-resource="${'single-feature' @ resourceType='/apps/eaton/static-components/content/title-text-image-link'}"></sly>
+                  <sly data-sly-resource="${'single-descriptive-feature' @ resourceType='/apps/eaton/static-components/content/title-text-image-link'}"></sly>
                 </div>
 
                 <!--/* Include: Link List - Download List */ -->
                 <div class="mega-menu__category-item">
-                  <sly data-sly-resource="${'download-list-3' @ resourceType='/apps/eaton/static-components/content/link-list'}"></sly>
+                  <sly data-sly-resource="${'download-descriptive-list' @ resourceType='/apps/eaton/static-components/content/link-list'}"></sly>
                 </div>
             </div>
           </div>
