Include Column support for 50% width - Mega Menu

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-products.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-products.html
@@ -28,7 +28,7 @@
             <div class="mega-menu__col mega-menu__col--4">
                 <!--/* Include: TTIL - Single Feature */ -->
                 <div class="mega-menu__category-item">
-                  <sly data-sly-resource="${'download-list-products' @ resourceType='/apps/eaton/static-components/content/link-list'}"></sly>
+                  <sly data-sly-resource="${'single-feature-products' @ resourceType='/apps/eaton/static-components/content/title-text-image-link'}"></sly>
                 </div>
             </div>
 
