Change the typography class - Eyebrow

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/social-links/static_social-links.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/social-links/static_social-links.html
@@ -10,7 +10,7 @@
 
     <!--/* If Eyebrow */-->
     <sly data-sly-test="${ data.eyebrow }">
-      <h4 class="eaton-social-links__eyebrow eyebrow-small">${ data.eyebrow }</h4>
+      <h4 class="eaton-social-links__eyebrow b-eyebrow-small">${ data.eyebrow }</h4>
     </sly>
 
     <!--/* List Links */-->
