--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/social-links/static_social-links.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/social-links/static_social-links.html
@@ -34,7 +34,7 @@
     <div class="eaton-social-links__cta">
       <a href="${ data.pageLink.url }"
         aria-label="${ data.pageLink.titleA11y }"
-        class="eaton-social-links__page-link body-copy-small"
+        class="eaton-social-links__page-link b-body-copy-small"
         target="${ data.pageLink.target }">
         <span class="eaton-social-links__page-link-text">${ data.pageLink.title }</span>
         <i class="eaton-social-links__page-link-icon glyphicon glyphicon-menu-right"
