Featured List - Styles + Data + Markup

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/static_title-text-image-link-list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/static_title-text-image-link-list.html
@@ -24,3 +24,6 @@
 <sly data-sly-test="${properties.view == 'image-only'}">
     <sly data-sly-include="views/view-image-only.html"></sly>
 </sly>
+<sly data-sly-test="${properties.view == 'featured-list'}">
+    <sly data-sly-include="views/view-featured-list.html"></sly>
+</sly>
