Added testdata for homepage

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/featured-topic/static_featured-topic.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/featured-topic/static_featured-topic.html
@@ -7,6 +7,15 @@
   <div class="eaton-featured-topic container" >
     <div class="row">
       <div class="col-sm-12">
+        <div class="eaton-featured-topic__title">
+          <!--/* Component: Title */-->
+          <sly data-sly-resource="${'featured-topic-title' @ resourceType='/apps/eaton/static-components/general/title'}"></sly>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-12">
         <div class="eaton-featured-topic__text">
           <!--/* Component: Text */-->
           <sly data-sly-resource="${'featured-topic-text' @ resourceType='/apps/eaton/static-components/general/text'}"></sly>
@@ -25,7 +34,7 @@
       <div class="col-sm-6 eaton-featured-topic__list-right">
         <div class="eaton-featured-topic__link-list">
           <!--/* Component: LinkList */-->
-          <sly data-sly-resource="${'eaton-featured-topic-link-list-left' @ resourceType='/apps/eaton/static-components/content/link-list'}"></sly>
+          <sly data-sly-resource="${'eaton-featured-topic-link-list-right' @ resourceType='/apps/eaton/static-components/content/link-list'}"></sly>
         </div>
       </div>
     </div>
