--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/static_list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/static_list.html
@@ -3,7 +3,7 @@
 </sly>
 
 <sly data-sly-test="${properties.view == 'nofeaturedarticle'}">
-    <sly data-sly-include="views/view-default.html" data-sly-unwrap></sly>    
+    <sly data-sly-include="views/view-default.html" data-sly-unwrap></sly>
 </sly>
 
 <sly data-sly-test="${properties.view == 'featuredarticle'}">
@@ -12,4 +12,8 @@
 
 <sly data-sly-test="${properties.view == 'article-list-single-feature'}">
     <sly data-sly-include="views/view-article-list-single-feature.html" data-sly-unwrap></sly>
+</sly>
+
+<sly data-sly-test="${properties.view == 'links'}">
+    <sly data-sly-include="views/view-links.html"></sly>
 </sly>
