Mega Menu - Links (Flexible columns) - Styles Completed

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/list.html
@@ -1,4 +1,4 @@
 
 <!-- Integrated code goes here -->
 
-<div data-sly-include="static_list.html"></div>
+<sly data-sly-include="static_list.html"></sly>
