Include links view into the first columns of all mega-menu pages

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-services.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-services.html
@@ -9,6 +9,10 @@
           <div class="mega-menu__row">
             <!--/* Include: Column 1 - Flexible width */ -->
             <div class="mega-menu__col mega-menu__col--flex">
+              <!--/* Include: List - Links */ -->
+              <div class="mega-menu__category-item">
+                <sly data-sly-resource="${'links-services' @ resourceType='/apps/eaton/static-components/content/list'}"></sly>
+              </div>
             </div>
 
             <!--/* Include: Column 2 */ -->
