EATON-193: the extra space was removed

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/featured-topic/static_featured-topic.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/featured-topic/static_featured-topic.html
@@ -41,10 +41,8 @@
 
     <div class="row eaton-featured-topic__button-container">
       <div class="col-sm-12 u-text-center">
-        <div class="eaton-featured-topic__text">
-          <!--/* Component: Text */-->
-          <sly data-sly-resource="${'featured-topic-text' @ resourceType='/apps/eaton/static-components/general/ctabutton'}"></sly>
-        </div>
+        <!--/* Component: Cta button */-->
+        <sly data-sly-resource="${'featured-topic-text' @ resourceType='/apps/eaton/static-components/general/ctabutton'}"></sly>
       </div>
     </div>
   </div>
