--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
@@ -9,12 +9,16 @@
                 <div class="row">
                     <div class="col-xs-9 header-utility-nav__toggle-selector">
                         <a href="#" class="open-country-selector">
+                            <i class="icon icon-globe" aria-hidden="true"></i>
                             <span class='header-utility-nav__country'>${header.defaultLabels.country}</span>
                             <span class='header-utility-nav__language'>${header.defaultLabels.language}</span>
                         </a>
                     </div>
                     <div class="col-xs-3 header-utility-nav__sign-in">
-                        <a href="#" class='open-sign-in'>${header.defaultLabels.signIn}</a>
+                        <a href="#" class='open-sign-in'>
+                          <i class="icon icon-user" aria-hidden="true"></i>
+                          ${header.defaultLabels.signIn}
+                        </a>
                     </div>
                 </div>
             </div>
