Icons updated (EATON - 209) for Header, Mega Menu Modules

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-markets.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-markets.html
@@ -12,7 +12,7 @@
         </a>
         <button class="button--reset mega-menu-title__close-menu">
           <span class="sr-only">Close Search</span>
-          <i class="mega-menu-title__icon glyphicon glyphicon-remove" aria-hidden="true"></i>
+          <i class="mega-menu-title__icon icon icon-close" aria-hidden="true"></i>
         </button>
       </div>
     </div>
