--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
@@ -12,7 +12,7 @@
                             <i class="icon icon-globe" aria-hidden="true"></i>
                             <span class='header-utility-nav__country'>${header.defaultLabels.country}</span>
                             <span class='header-utility-nav__language'>${header.defaultLabels.language}</span>
-                            <i class="icon icon-chevron-right" aria-hidden="true"></i>
+                            <i class="icon icon-chevron-down" aria-hidden="true"></i>
                         </a>
                     </div>
                     <div class="col-xs-3 header-utility-nav__sign-in">
