--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/static_list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/static_list.html
@@ -17,3 +17,7 @@
 <sly data-sly-test="${properties.view == 'links'}">
     <sly data-sly-include="views/view-links.html"></sly>
 </sly>
+
+<sly data-sly-test="${properties.view == 'related-products'}">
+    <sly data-sly-include="views/view-related-products.html"></sly>
+</sly>
