--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/icon-list/static_icon-list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/icon-list/static_icon-list.html
@@ -17,3 +17,7 @@
 <sly data-sly-test="${ properties.view == 'proof-points' }">
   <sly data-sly-include="views/view-proof-points.html" data-sly-unwrap></sly>
 </sly>
+
+<sly data-sly-test="${ properties.view == 'no-image-highlights' }">
+  <sly data-sly-include="views/view-no-image-highlights.html" data-sly-unwrap></sly>
+</sly>
