--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/icon-list/static_icon-list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/icon-list/static_icon-list.html
@@ -21,3 +21,7 @@
 <sly data-sly-test="${ properties.view == 'no-image-highlights' }">
   <sly data-sly-include="views/view-no-image-highlights.html" data-sly-unwrap></sly>
 </sly>
+
+<sly data-sly-test="${properties.view == 'top-list-with-icon'}">
+    <sly data-sly-include="views/view-top-list-with-icon.html"></sly>
+</sly>
