--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/product-tabs-family/static_product-tabs-family.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/product-tabs-family/static_product-tabs-family.html
@@ -12,37 +12,42 @@
       <input id="resources" type="radio" name="product-tab">
 
       <div class="row">
-        <div class="col-sm-4">
+        <div class="col-md-4">
           <div class="eaton-product-tabs__description">
-            <div class="b-eyebrow-small">
-              EATON 9PX
-            </div>
+            <a href="#take-me-somewhere" class="b-eyebrow-small">
+              <i class="icon icon-chevron-left" aria-hidden="true"></i>
+                NETWORK SERVER STORAGE UPS
+            </a>
             <div class="b-heading-h5">
               9PX UPS
             </div>
           </div>
         </div>
-        <div class="col-sm-5">
-          <label for="overview">
-            <!-- <a href="#overview" > -->
+
+        <div class="col-md-5">
+          <div class="row">
+            <label for="overview">
+              <!-- <a href="#overview" > -->
               <i class="icon icon-doc-text" aria-hidden="true"></i>
               <span>Overview</span>
-            <!-- </a> -->
-          </label>
-          <label for="specifications">
-            <!-- <a href="#" > -->
+              <!-- </a> -->
+            </label>
+            <label for="specifications">
+              <!-- <a href="#" > -->
               <i class="icon icon-tiles" aria-hidden="true"></i>
               <span>Specifications</span>
-            <!-- </a> -->
-          </label>
-          <label for="resources">
-            <!-- <a href="#resources" > -->
+              <!-- </a> -->
+            </label>
+            <label for="resources">
+              <!-- <a href="#resources" > -->
               <i class="icon icon-doc-download" aria-hidden="true"></i>
               <span>Resources</span>
-            <!-- </a> -->
-          </label>
+              <!-- </a> -->
+            </label>
+          </div>
         </div>
-        <div class="col-sm-3 u-text-center">
+
+        <div class="col-md-3 u-text-center">
           <button class="eaton-product-tabs__dropdown">
             How to buy
             <i class="icon icon-chevron-down" aria-hidden="true"></i>
