added style to product tabs family

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-tabs-family/static_product-tabs-family.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-tabs-family/static_product-tabs-family.html
@@ -11,7 +11,7 @@
       <input id="specifications" type="radio" name="product-tab">
       <input id="resources" type="radio" name="product-tab">
 
-      <div class="row">
+      <div class="row eaton-product-tabs__buttons">
         <div class="col-md-4">
           <div class="eaton-product-tabs__description">
             <a href="${data.eyebrowCta.href}"
