--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
@@ -47,9 +47,10 @@
                           <span class="sr-only">Search</span>
                           <i class="icon icon-search" aria-hidden="true"></i>
                         </button>
-                        <button class="button--reset header-primary-nav__open-mobile-menu">
-                          <span class="sr-only">Open Mobile Menu</span>
+                        <button class="button--reset header-primary-nav__toggle-mobile-menu">
+                          <span class="sr-only">Toggle Mobile Menu</span>
                           <i class="icon icon-hamburger" aria-hidden="true"></i>
+                          <i class="icon icon-close" aria-hidden="true"></i>
                         </button>
                     </div>
                 </div>
