--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/tabbed-menu-list/static_tabbed-menu-list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/tabbed-menu-list/static_tabbed-menu-list.html
@@ -6,7 +6,7 @@
 	<div class="container">
 		<div id="accordion" class="panel-group eaton-tabbed-menu-list__accordion" data-sly-list.tab=${data.tabs}>
 			<div class="eaton-tabbed-menu-list__item col-md-4">
-				<a class="eaton-tabbed-menu-list__title mobile" data-toggle="collapse" data-parent="#accordion" href="#collapse${tabList.index}" data-index="${tabList.index}">
+				<a class="eaton-tabbed-menu-list__title mobile collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse${tabList.index}" data-index="${tabList.index}">
 					${tab.title} <span class="icon icon-sign-plus pull-right"></span>
 				</a>
 				<a class="eaton-tabbed-menu-list__title desktop" data-toggle="tab" href="#tab${tabList.index}" data-index="${tabList.index}">
