--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-company.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/mega-menu-company.html
@@ -22,7 +22,7 @@
       <div class="container">
           <div class="mega-menu__row">
             <!--/* Include: Column 1 - Flexible width */ -->
-            <div class="mega-menu__col mega-menu__col--flex">
+            <div class="mega-menu__col mega-menu__col--flex mega-menu__col--4">
               <!--/* Include: List - Links */ -->
               <div class="mega-menu__category-item">
                 <sly data-sly-resource="${'links-company' @ resourceType='/apps/eaton/static-components/content/list'}"></sly>
